user anagement common pages done

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,6 +1,11 @@
-<div>
-  <h1>USER MANAGEMENT LOGIN MODULE</h1>
-</div>
+<ul>
 
-<a routerLink="/app1">QMS</a> |
-<a routerLink="/app2">SMP</a>
+  <li><a class="active">Home</a></li>
+  <li><a>News</a></li>
+
+</ul>
+
+<div style="margin-left:25%;padding:1px 16px;">
+  <a routerLink="/app1">QMS</a> |
+  <a routerLink="/app2">SMP</a>
+</div>
