--- a/projects/app1/src/app/view2/view2.component.html
+++ b/projects/app1/src/app/view2/view2.component.html
@@ -1,4 +1,7 @@
-<app-nav></app-nav>
-<p>
-  app1 view2 works!
-</p>
+<div style="margin-left:25%;padding:1px 16px;">
+  <app-nav></app-nav>
+  <p>
+    QMS PAGE TWO
+  </p>
+
+</div>
